# Youtube-Soundcload

./: .gitignore  CHANGELOG.md  playlistdownloader-PyQt5.py  playlistdownloader.py  requirements.txt  soundsync-extension.crx  soundsync-extension.pem
soundsync-extension/: background.js  manifest.json  popup.html  popup.js
soundsync-tauri/: ARCHITECTURE.md  BUILD_GUIDE.md  CHANGELOG.md  index.html  package-lock.json  package.json
soundsync-tauri/.github/workflows/: release.yml
soundsync-tauri/src/: App.tsx  index.css  main.ts  styles.css
soundsync-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
soundsync-tauri/src-tauri/capabilities/: default.json
soundsync-tauri/src-tauri/icons/: icon.icns
soundsync-tauri/src-tauri/src/: applemusic.rs  commands.rs  lib.rs  main.rs  models.rs  remote.html  server.rs  spotify.rs  utils.rs
soundsync-tauri/src/i18n/: de.json  en.json  pl.json
