[package]
name = "SoundSync-Downloader"
version = "2.2.1"
description = "SoundSync Downloader – YouTube & SoundCloud Downloader"
authors = ["Malionaro"]
edition = "2021"

[lib]
name = "soundsync_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
arboard = "3"
discord-rich-presence = "1.1.0"
tiny_http = "0.12"
local-ip-address = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
